precision is being separated !

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(CovTest1)
 export(CovTest2)
 export(PreEst)
 export(PreEst.auto)
+export(PreEst.glasso)
 export(samplecovs)
 import(doParallel)
 import(foreach)
