banded1 and banded2 need documnetation !!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,8 @@ export(CovEst.soft)
 export(CovMean)
 export(CovTest1)
 export(CovTest2)
-export(PreEst)
-export(PreEst.auto)
+export(PreEst.banded1)
+export(PreEst.banded2)
 export(PreEst.glasso)
 export(samplecovs)
 import(doParallel)
