--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(CovTest1)
 export(CovTest2)
 export(PreEst.banded1)
 export(PreEst.banded2)
+export(PreEst.banded3)
 export(PreEst.glasso)
 export(samplecovs)
 import(doParallel)
@@ -35,6 +36,7 @@ importFrom(pracma,flipud)
 importFrom(pracma,procrustes)
 importFrom(stats,cor)
 importFrom(stats,cov)
+importFrom(stats,pnorm)
 importFrom(stats,qnorm)
 importFrom(stats,qt)
 importFrom(stats,rnorm)
