complete version of 0.5.0;

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(CovEst.soft)
 export(CovMean)
 export(CovTest1)
 export(CovTest2)
+export(DiagTest1)
 export(PreEst.banded1)
 export(PreEst.banded2)
 export(PreEst.banded3)
@@ -42,4 +43,5 @@ importFrom(stats,pnorm)
 importFrom(stats,qnorm)
 importFrom(stats,qt)
 importFrom(stats,rnorm)
+importFrom(utils,packageVersion)
 useDynLib(CovTools)
