--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(PreEst.2017Lee)
 export(PreEst.glasso)
 export(samplecovs)
 import(Rdpack)
+import(SHT)
 import(doParallel)
 import(foreach)
 import(parallel)
