--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(BCovTest1.mxPBF)
 export(BDiagTest1.mxPBF)
 export(CovDist)
 export(CovEst.2003LW)
+export(CovEst.2010OAS)
+export(CovEst.2010RBLW)
 export(CovEst.adaptive)
 export(CovEst.hard)
 export(CovEst.hardPD)
