--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Description: Covariance is of universal prevalence across various disciplines wi
     For an introduction to covariance in multivariate statistical analysis,
     see Schervish (1987) <doi:10.1214/ss/1177013111>.
 License: GPL (>=3)
+URL: https://github.com/kyoustat/CovTools
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 2.14.0)
